--- a/Battleship/res/layout/activity_selection.xml
+++ b/Battleship/res/layout/activity_selection.xml
@@ -20,4 +20,13 @@
         android:paddingTop="4dp"
         android:textColor="#fff" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="29dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="clicked"
+        android:text="@string/new_game"
+        android:textSize="80sp" />
 </android.support.v4.view.ViewPager>
