--- a/Battleship/res/layout/activity_selection.xml
+++ b/Battleship/res/layout/activity_selection.xml
@@ -26,7 +26,7 @@
         android:layout_height="400dp"
         android:layout_marginTop="29dp"
         android:layout_centerHorizontal="true"
-        android:onClick="clicked"
-        android:text="@string/new_game"
-        android:textSize="80sp" />
+        android:text="AAAAAAAAAAAAAAAAAAAAA"
+        android:textSize="80sp" 
+    	android:onClick="jumpToPage"/>
 </android.support.v4.view.ViewPager>
