--- a/Battleship/res/layout/activity_scroll_page2.xml
+++ b/Battleship/res/layout/activity_scroll_page2.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ScrollPage" >
+    tools:context=".ScrollPage2" >
 
     <TextView
         android:id="@+id/textView1"
@@ -79,62 +79,62 @@
         android:layout_gravity="center_vertical" >
 
         <TextView
-            android:id="@+id/textViewA"
+            android:id="@+id/textView1"
             android:layout_width="302dp"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/title_A"
+            android:text="@string/title_1"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="400sp" />
 
     <TextView
-        android:id="@+id/textViewB"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/title_B"
+        android:text="@string/title_2"
         android:textAppearance="?android:attr/textAppearanceLarge" 
         android:textSize="400sp"/>
 
     <TextView
-        android:id="@+id/textViewC"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/title_C"
+        android:text="@string/title_3"
         android:textAppearance="?android:attr/textAppearanceLarge" 
         android:textSize="400sp"/>
 
     <TextView
-        android:id="@+id/textViewD"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/title_D"
+        android:text="@string/title_4"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="400sp"/>
 
     <TextView
-        android:id="@+id/textViewE"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/title_E"
+        android:text="@string/title_5"
         android:textAppearance="?android:attr/textAppearanceLarge" 
         android:textSize="400sp"/>
 
     <TextView
-        android:id="@+id/textViewF"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/title_F"
+        android:text="@string/title_6"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="400sp"/>
     </ViewFlipper>
