--- a/Battleship/res/layout/activity_scroll_page2.xml
+++ b/Battleship/res/layout/activity_scroll_page2.xml
@@ -16,8 +16,8 @@
         android:layout_centerVertical="true"
         android:text="@string/title_A"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="350sp" 
-        android:visibility="gone"/>
+        android:textSize="350sp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textView2"
@@ -69,9 +69,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:visibility="gone" />
 
-    
-    
-    
     <ViewFlipper
         android:id="@+id/view_flipper"
         android:layout_width="fill_parent"
@@ -84,64 +81,65 @@
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:gravity="center"
             android:text="@string/title_1"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="350sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/title_2"
-        android:textAppearance="?android:attr/textAppearanceLarge" 
-        android:textSize="350sp"/>
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="302dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@string/title_2"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="350sp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/title_3"
-        android:textAppearance="?android:attr/textAppearanceLarge" 
-        android:textSize="350sp"/>
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="302dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@string/title_3"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="350sp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/title_4"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="350sp"/>
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="302dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@string/title_4"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="350sp" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/title_5"
-        android:textAppearance="?android:attr/textAppearanceLarge" 
-        android:textSize="350sp"/>
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="302dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@string/title_5"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="350sp" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/title_6"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="350sp"/>
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="302dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@string/title_6"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="350sp" />
     </ViewFlipper>
-    
-    
-    
-    
-    
-    
+
 </RelativeLayout>
