--- a/Battleship/res/layout/activity_main.xml
+++ b/Battleship/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:text="@string/main_title"
         android:textSize="60sp"
         android:textAlignment="center"
+        android:gravity="center"
        	 />
     
     <Button
